--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,113 @@
 }
 
 /*FIXA ALLT SOM ÄR OFF CENTER*/
-/*Fixa när man hovrar över länkarna*/
 /*Fixa mobil-versionen*/
+/*Fixa så att h1 går ner till h2 och sedan h3, annars blir Leo inte glad*/
+/*Fixa en text längst upp för bokningssida som säger att här kan man boka*/
+/*FIxa bildstorlek*/
+/*Använd math för att hålla burgarmenyn i mitten*/
+
+/*Här börjar stylingen för boendesidan*/
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; 
+}
+
+#grid_wrapper_boende{
+    height: 225vh;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: 5fr 1fr;
+    grid-template-rows:100px 1fr 1fr ;
+    grid-template-areas: 
+    "hdr nav"
+    "bo1 bo1"
+    "bo2 bo2"
+    ;
+}
+
+#Harmanovagen{
+    grid-area: bo1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: white;
+}
+
+#rubrik_harm{
+    font-size: 1.6rem;
+}
+
+#bild_på_harmanovagen{
+    height: auto;
+    width: 80vw;
+    border-radius: 3px;
+}
+
+#desc_harm{
+    padding: 10px;
+    padding-top: 0px;
+}
+
+#booking_button_harm{
+    background-color: rgb(240, 240, 240);
+    width: 150px;
+    height: 75px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-size: 1.5rem;
+    font-style: italic;
+    text-decoration: none;
+}
+
+#oskargatan{
+    grid-area: bo2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: white;
+}
+
+#rubrik_osk{
+    font-size: 1.6rem;
+}
+
+#bild_på_harmanovagen{
+    height: auto;
+    width: 80vw;
+    border-radius: 3px;
+}
+
+#desc_osk{
+    padding: 10px;
+    padding-top: 0px;
+}
+
+#booking_button_osk{
+    background-color: rgb(240, 240, 240);
+    width: 150px;
+    height: 75px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-size: 1.5rem;
+    font-style: italic;
+    text-decoration: none;
+}
+
+
+/*Här slutar stylingen för boendesidan*/
+
+
+/*Styling för startsidan nedanför*/
 
 #grid_wrapper{
     height: 100vh;
@@ -77,7 +182,7 @@ nav{
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: bold;
     margin-top: 50px;
-    font-size: 1.2rem;
+    font-size: 1.2rem;  
 }
 
 #nav-links a:hover{
