--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@
 /*Använd math för att hålla burgarmenyn i mitten*/
 /*Fixa så att man inte kan klicka på linjen*/
 /*Fråga leo om linjen i starten*/ 
+/*Ändra färgen på sidan. Kanske lite ljusblå?*/
+/*Fixa drop-down menyn på boendesidan*/
+/*FRÅGA LEO VARFÖR BOENDERTEXTEN INTE BLIR 100VW*/
 
 /*Här börjar stylingen för boendesidan*/
 *{
@@ -109,6 +112,11 @@
     font-size: 1.5rem;
     font-style: italic;
     text-decoration: none;
+}
+
+#article_boende {
+    display: none;
+
 }
 
 
@@ -232,7 +240,7 @@ nav{
     position: relative;
 }
 
-#image{
+#image_start{
     width: 100vw;
     height: max-content;
 }
@@ -243,7 +251,7 @@ nav{
     margin-bottom: 5px;
 }
 
-article {
+#article_start {
     grid-area: art;
     display: flex;
     justify-content: center;
@@ -259,7 +267,7 @@ article {
     width: 100vw;
 }
 
-article h2{
+#article_start h2{
     background: white;
     grid-area: rbk;
     display: flex;
@@ -268,13 +276,15 @@ article h2{
 
 }
 
-article p{
+#article_start p{
     background-color: white;
     grid-area: txt;
     padding: 7px;
 }
 
 @media screen and (min-width:800px) {
+
+    /*Här är stylingen för desktop-versionen av startsidan*/
     #grid_wrapper{
         height: 100vh;
         width: 100vw;
@@ -296,7 +306,7 @@ article p{
         margin-bottom: 5px;
     }
 
-    #image{
+    #image_start{
         width: max-content;
         height: max-content;
     }
@@ -347,26 +357,53 @@ article p{
         display: none;
     }
 
-
-
-    article{
+    #article_start{
         width: 50vw;
     }
 
-    /*Här kommer stylingen för boendesidan*/
+    /*Här kommer stylingen för desktop-versionen av boendesidan*/
 
     #grid_wrapper_boende{
         height: 175vh;
         width: 100vw;
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows:100px 50px 2fr 3fr ;
+        grid-template-columns: 1fr 10px 1fr;
+        grid-template-rows:100px 50px 1fr 3fr ;
         grid-template-areas: 
-        "hdr hdr "
-        "nav nav "
-        "txt txt"
-        "bo1 bo2"
+        "hdr hdr hdr"
+        "nav nav nav"
+        "txt txt txt"
+        "bo1 lnj bo2"
         ;
     }
 
+    #article_boende{
+        grid-area: txt;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 100%;
+        padding-top: 20px;
+    }
+
+    #article_boende_text{
+        width: 20vw;
+        font-size: 1.15rem;
+        line-height: 25px;
+        bottom: 0;
+    } 
+
+    #Harmanovagen{
+        margin-right: 10px;
+    }
+
+    #oskargatan{
+        margin-left: 10px;
+    }
+
+    #linje2{
+        grid-area: lnj;
+        background-color: lightblue;
+    }
 }
