--- a/css/style.css
+++ b/css/style.css
@@ -6,20 +6,17 @@
     max-width: 100%; 
 }
 
-/* FIXA ALLT SOM ÄR OFF CENTER*/
+
 /*Fixa mobil-versionen*/
 /*Fixa så att h1 går ner till h2 och sedan h3, annars blir Leo inte glad*/
-/*Fixa en text längst upp för bokningssida som säger att här kan man boka*/
 /*FIxa bildstorlek*/
-/*Använd math för att hålla burgarmenyn i mitten*/
-/*Fixa så att man inte kan klicka på linjen*/
-/*Fråga leo om linjen i starten*/ 
 /*Ändra färgen på sidan. Kanske lite ljusblå?*/
 /*Fixa drop-down menyn på boendesidan. Den ska inte bara täcka hela sidan. Kanske lås scroll?*/
 /*FRÅGA LEO VARFÖR BOENDERTEXTEN INTE BLIR 100VW*/
 /*Fixa font-sizen på boende-sidan */
 /*FIXA EN GENEREL METOD FÖR HÖJDEN PÅ ARTIKLARNA PÅ BOENDESIDAN */
 /*VIKTIG FIX: FIXA FÄRGSTYLIGENN FÖR ALLA SIDORNA. BÅDE MOBIL OCH DESKTOP*/
+/*Fixa så att det inte är en orch-sida  */
 
 /*Här börjar stylingen för boendesidan*/
 *{
@@ -145,7 +142,6 @@
 
 #rubrik{
     grid-area: hdr;
-    background-color: white;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     display: flex;
     justify-content: center;
@@ -272,7 +268,6 @@ nav{
 }
 
 #article_start h2{
-    background: white;
     grid-area: rbk;
     display: flex;
     justify-content: center;
@@ -313,10 +308,10 @@ nav{
         width: auto;
         height: 400px;
         background-color: rgb(23, 37, 56);
+        border-radius: 5px;
     }
 
     #article_start p{
-        background-color: white;
         grid-area: txt;
         font-size: 1.2rem;
         background-color: rgb(23, 37, 56);
@@ -329,13 +324,12 @@ nav{
 
     #nav-links{
         top: 85px;
-        height: 100px;
+        height: 50px;
         width: 100vw;
         display: flex;
         flex-direction: row;
         justify-content:space-evenly;
         align-items: center;
-        background-color: white;
         margin-left: 0;
         background-color: rgb(23, 37, 56);
         color: white;
@@ -343,7 +337,7 @@ nav{
 
     #nav-links a {
         margin-bottom: 50px;
-        height: 70px;
+        height: 60px;
         width: 20vw;
         border-radius: 7px;
         font-size: 1.2rem;
@@ -439,6 +433,7 @@ nav{
         width: max-content;
         height: auto;
         bottom: 0;
+        border-radius: 5px;
     }
 
 
@@ -451,6 +446,7 @@ nav{
         "img rbk"
         "img art"
         ;  
+        padding-top: 5px;
     }
 
     #bild_pa_harmanovagen{
@@ -458,6 +454,7 @@ nav{
         width: max-content;
         height: auto;
         top: 0;
+        border-radius: 5px;
     }
 
     #art_harm{
