--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,74 @@
 /*Kan bara anvönda den allmänna styligngen för bakgrund*/
 
 
+/*Här börjar stylingen för galleri-sidan*/
+
+#grid_wrapper_galleri{
+    height: 110vh;
+    width: 100%;
+    display: grid;
+    grid-template-rows: 100px 40vh 40vh 30vh;
+    grid-template-columns: 5fr 1fr;
+    grid-template-areas: 
+    "hdr nav"
+    "all all"
+    "im2 im2"
+    "sls sls"
+    ;
+    background-color: rgb(23, 37, 56);
+}
+
+#fotografer_och_bilder{
+    grid-area: all;
+    display: flex;
+    justify-content: space-evenly;
+    padding-right: 10vw;
+    padding-top: 3vh;
+    color: white;
+    background-color: rgb(23, 37, 56);
+}
+
+#fotografer ul{
+    list-style: none;
+}
+
+#fotografer{
+    line-height: 2rem;
+}
+
+#static_img1{
+    width: 40vw;
+    height: 30vh;
+    border-radius: 5px;
+}
+
+#static_image2{
+    grid-area: im2;
+    width: 95vw;
+    height: 30vh;
+    margin-left: 2.5vw;
+    border-radius: 5px;
+}
+
+#slideshow_container{
+    grid-area: sls;
+    width: 100%;
+    height: 30vh;
+    background-color: rgb(23, 37, 56);
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.slideshow{
+    width: 95vw;
+    height: 30vh;
+    border-radius: 5px;
+    transition: all 1s;
+}
+
+/*Här slutar stylingen för galleri-sidan*/
+
 /*Här börjar stylingen för Att göra-sidan*/
 #grid_wrapper_att_gora{
     height: 175vh;
@@ -41,6 +109,7 @@
     flex-direction: column;
     height: auto;
     width: 99%;
+    padding-bottom: 5px;
 }
 
 #besok_gullh{
