--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,8 @@
 /*Fixa bilder, alla ska inte vara placeholders*/
 /*FIXA BILDEN PÅ STARTSIDAN FÖR MOBIL*/
 /*Kan bara anvönda den allmänna styligngen för bakgrund*/
+/*FIXA SÅ ATT NAVEN INTE ÄR LÄNGST UPP PÅ SIDAN*/
+/*Fixa boendesidan mobilversionen. Den är asful nu*/
 
 
 /*Här börjar stylingen för galleri-sidan*/
@@ -60,11 +62,18 @@
     border-radius: 5px;
 }
 
-#static_image2{
+#static_img2_parent{
     grid-area: im2;
-    width: 95vw;
+    width: 100%;
     height: 30vh;
-    margin-left: 2.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#static_image2{
+    width: 95vw;
+    height: inherit;
     border-radius: 5px;
 }
 
@@ -464,7 +473,7 @@ nav{
     "txt txt"
     ;
     margin-left: 0px;
-    width: 100vw;
+    width: 100%;
 }
 
 #article_start h2{
