--- a/css/style.css
+++ b/css/style.css
@@ -534,8 +534,9 @@ nav{
 #article_start {
     grid-area: art;
     display: flex;
-    justify-content: center;
-    align-items: space-evenly;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 6fr;
