--- a/css/style.css
+++ b/css/style.css
@@ -559,7 +559,7 @@ nav{
     padding: 7px;
 }
 
-@media screen and (min-width:800px) {
+@media screen and (min-width:900px) {
 
     /*Här är stylingen för desktop-versionen av startsidan*/
     #grid_wrapper{
@@ -703,11 +703,11 @@ nav{
     }
 
     #booking_button_osk{
-        width: 10vw;
+        width: 180px;
     }
 
     #booking_button_harm{
-        width: 10vw;
+        width: 180px;
     }
 
 
@@ -726,8 +726,8 @@ nav{
 
     #bild_pa_harmanovagen{
         grid-area: img;
-        width: auto;
-        height: 90vh;
+        width: 900px;
+        height: 70vh;
         top: 0;
         border-radius: 5px;
         margin-left: 1vw;
@@ -739,9 +739,10 @@ nav{
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: space-around;
+        justify-content: center;
         font-size: 1rem;  
         height: 80vh; 
+        width: 40vw;
     }
 
     #rubrik_harm{
