--- a/css/style.css
+++ b/css/style.css
@@ -683,7 +683,6 @@ nav{
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
-
         font-size: 1rem;  
         height: 80vh; 
     }
@@ -736,12 +735,15 @@ nav{
         justify-content: center;
         font-size: 1rem;  
         height: 80vh; 
+        padding-left: 20px;
+        padding-right: 20px;
     }
 
     #rubrik_harm{
         grid-area: rbk;
         display: flex;
         justify-content: center;
+        height: auto;
     }
 
 
